// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts dashboard component should render component with sor code contracts displayed 1`] = `
<DocumentFragment>
  <a
    class="govuk-back-link lbh-back-link govuk-!-display-none-print"
    role="button"
  >
    Back
  </a>
  <h1
    class="lbh-heading-h1"
  >
    Sycous Limited SYC
  </h1>
  <h3
    class="lbh-heading-h3 lbh-!-font-weight-bold govuk-!-margin-bottom-1"
  >
    Active contracts:
  </h3>
  <ol
    data-test-id="active-contracts-list"
    style="display: grid; grid-template-columns: repeat(auto-fill, 10rem); gap: 1rem; list-style: none; padding: 0px; margin: 0px;"
  >
    <li
      data-id="0"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          126-126-1266
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £0.00
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           0
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            9 Aug 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="1"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          127-127-1277
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £0.00
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           0
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="2"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          128-128-1288
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           34
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="3"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          129-129-1299
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £544,898.23
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           3441
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="4"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          130-130-1300
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £573,623.97
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           3443
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="5"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          131-131-1311
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £143,393.57
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           904
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="6"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          132-132-1322
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £56.74
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           2
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
  </ol>
  <h3
    class="lbh-heading-h3 lbh-!-font-weight-bold govuk-!-margin-bottom-1"
  >
    Inactive contracts (from 2020):
  </h3>
  <ol
    data-test-id="inactive-contracts-list"
    style="display: grid; grid-template-columns: repeat(auto-fill, 10rem); gap: 1rem; list-style: none; padding: 0px; margin: 0px;"
  >
    <li
      data-id="0"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          133-133-1388
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            11 May 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="1"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          144-144-1444
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            11 May 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="2"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          155-155-1555
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            11 May 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="3"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          166-166-16666
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            8 Jul 2025
          </span>
        </p>
      </div>
    </li>
  </ol>
  <div>
    <section
      class="section"
    >
      <h3
        class="lbh-heading-h3"
      >
        Check an SOR code
      </h3>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
            for="input-search"
          >
            Find out which Sycous Limited contracts an SOR code exists in
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            data-testid="input-search"
            id="input-search"
            name="search-name"
            type="text"
            value="ABC123"
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              data-testid="submit-search"
              id="submit-search"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
    <h3
      class="lbh-heading-h3 lbh-!-font-weight-bold govuk-!-margin-bottom-1"
    >
      ABC123 found in the following Sycous Limited contracts
    </h3>
    <ol
      data-test-id="contract-list"
      style="display: grid; grid-template-columns: repeat(auto-fill, 10rem); gap: 1rem; list-style: none; padding: 0px; margin: 0px;"
    >
      <li
        data-id="0"
        style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
      >
        <div
          class="contract-details"
        >
          <h5
            style="white-space: nowrap;"
          >
            132-132-1322
          </h5>
          <p
            style="color: green;"
          >
            Active
          </p>
        </div>
      </li>
      <li
        data-id="1"
        style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
      >
        <div
          class="contract-details"
        >
          <h5
            style="white-space: nowrap;"
          >
            155-155-1555
          </h5>
          <p
            style="color: red;"
          >
            Expired: 11 May 2025
          </p>
        </div>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`Contracts dashboard component should render the component without displaying sor contracts 1`] = `
<DocumentFragment>
  <a
    class="govuk-back-link lbh-back-link govuk-!-display-none-print"
    role="button"
  >
    Back
  </a>
  <h1
    class="lbh-heading-h1"
  >
    Sycous Limited SYC
  </h1>
  <h3
    class="lbh-heading-h3 lbh-!-font-weight-bold govuk-!-margin-bottom-1"
  >
    Active contracts:
  </h3>
  <ol
    data-test-id="active-contracts-list"
    style="display: grid; grid-template-columns: repeat(auto-fill, 10rem); gap: 1rem; list-style: none; padding: 0px; margin: 0px;"
  >
    <li
      data-id="0"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          126-126-1266
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £0.00
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           0
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            9 Aug 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="1"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          127-127-1277
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £0.00
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           0
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="2"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          128-128-1288
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           34
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="3"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          129-129-1299
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £544,898.23
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           3441
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="4"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          130-130-1300
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £573,623.97
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           3443
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="5"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          131-131-1311
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £143,393.57
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           904
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="6"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          132-132-1322
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £56.74
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           2
        </p>
        <p>
          Expires: 
          <span
            style="font-weight: 600;"
          >
            9 Jan 2026
          </span>
        </p>
      </div>
    </li>
  </ol>
  <h3
    class="lbh-heading-h3 lbh-!-font-weight-bold govuk-!-margin-bottom-1"
  >
    Inactive contracts (from 2020):
  </h3>
  <ol
    data-test-id="inactive-contracts-list"
    style="display: grid; grid-template-columns: repeat(auto-fill, 10rem); gap: 1rem; list-style: none; padding: 0px; margin: 0px;"
  >
    <li
      data-id="0"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          133-133-1388
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            11 May 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="1"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          144-144-1444
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            11 May 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="2"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          155-155-1555
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            11 May 2025
          </span>
        </p>
      </div>
    </li>
    <li
      data-id="3"
      style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
    >
      <div
        class="contract-details"
      >
        <h5
          style="white-space: nowrap;"
        >
          166-166-16666
        </h5>
        <p>
          <span
            style="font-weight: 600;"
          >
            Sum of SORs:
          </span>
           £5,958.38
        </p>
        <p>
          <span
            style="font-weight: 600;"
          >
            SOR Count:
          </span>
           20
        </p>
        <p>
          Expired: 
          <span
            style="font-weight: 600;"
          >
            8 Jul 2025
          </span>
        </p>
      </div>
    </li>
  </ol>
  <div>
    <section
      class="section"
    >
      <h3
        class="lbh-heading-h3"
      >
        Check an SOR code
      </h3>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
            for="input-search"
          >
            Find out which Sycous Limited contracts an SOR code exists in
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            data-testid="input-search"
            id="input-search"
            name="search-name"
            type="text"
            value=""
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              data-testid="submit-search"
              disabled=""
              id="submit-search"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
